# reachy_mini_rust_kinematics

./: Cargo.toml  README.md  test.py
.github/workflows/: rust.yml
src/: lib.rs  main.rs
