[package]
name = "reachy_mini_rust_kinematics"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
env_logger = "0.11.8"
nalgebra = "0.34.0"
pyo3 = "0.26.0"
pyo3-stub-gen = "0.13.1"
rust-numpy = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
